template3-template-1713636767782.yaml
---
Metadata:
  TemplateId: "arn:aws:cloudformation:us-east-1:635638247318:generatedTemplate/c8b08a96-24e0-4ec5-aa9f-43fc059c4169"
Resources:
  EC2Route00rtb04deb02926f06214400LHLlt:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb04deb02926f06214400iz7E5"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC00vpc03ab091f2971e59d600sPFOc"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tgb3d357c1fe8477e400ZzNIM:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 30
      Matcher:
        HttpCode: "200"
      HealthCheckPath: "/"
      Port: 80
      Targets:
      - Port: 80
        Id: "i-02d03282e8b98e8eb"
      HealthCheckEnabled: true
      ProtocolVersion: "HTTP1"
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      Name: "assignment2-tg"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      HealthyThresholdCount: 5
      HealthCheckProtocol: "HTTP"
      TargetGroupAttributes:
      - Value: "lb_cookie"
        Key: "stickiness.type"
      - Value: "86400"
        Key: "stickiness.app_cookie.duration_seconds"
      - Value: "1"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.count"
      - Value: "use_load_balancer_configuration"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "86400"
        Key: "stickiness.lb_cookie.duration_seconds"
      - Value: "off"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.percentage"
      - Value: "false"
        Key: "stickiness.enabled"
      - Value: "off"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage"
      - Value: "0"
        Key: "slow_start.duration_seconds"
      - Value: "300"
        Key: "deregistration_delay.timeout_seconds"
      - Value: "1"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count"
      - Value: "off"
        Key: "load_balancing.algorithm.anomaly_mitigation"
      - Value: ""
        Key: "stickiness.app_cookie.cookie_name"
      - Value: "round_robin"
        Key: "load_balancing.algorithm.type"
      TargetType: "instance"
      HealthCheckPort: "traffic-port"
      Protocol: "HTTP"
      Tags: []
  EC2SecurityGroup00sg038184bc6bdc2617d001AGHf:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "default VPC security group"
      GroupName: "default"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      SecurityGroupIngress:
      - IpProtocol: "-1"
        FromPort: -1
        SourceSecurityGroupId:
          Fn::GetAtt:
          - "EC2VPC00vpc03ab091f2971e59d600sPFOc"
          - "DefaultSecurityGroup"
        ToPort: -1
        SourceSecurityGroupOwnerId: "635638247318"
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2Route00rtb0e3327c5663eb64a100fUzb8:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0e3327c5663eb64a100VRnny"
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId:
        Ref: "EC2InternetGateway00igw0cd3c759ebd09417c006mHVw"
      VpcEndpointId: "igw-0cd3c759ebd09417c"
  EC2Route00rtb05c65b04846b1b8e600Klfrf:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      NatGatewayId:
        Ref: "EC2NatGateway00nat072d4501c44e61ebd00EiWfQ"
      RouteTableId:
        Ref: "EC2RouteTable00rtb05c65b04846b1b8e600EYDJe"
      DestinationCidrBlock: "0.0.0.0/0"
  EC2Route00rtb0c4bc7b1b0ad3238000FuvKj:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0c4bc7b1b0ad3238000E4Goe"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC00vpc03ab091f2971e59d600sPFOc"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2RouteTable00rtb04deb02926f06214400iz7E5:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      Tags:
      - Value: "assignment2-rtb-private1-us-east-1a"
        Key: "Name"
  EC2Route00rtb04deb02926f06214400nzl1Q:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      NatGatewayId:
        Ref: "EC2NatGateway00nat072d4501c44e61ebd00EiWfQ"
      RouteTableId:
        Ref: "EC2RouteTable00rtb04deb02926f06214400iz7E5"
      DestinationCidrBlock: "0.0.0.0/0"
  EC2DHCPOptions00dopt015de2090e3cc2b1600GfnZP:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::DHCPOptions"
    DeletionPolicy: "Retain"
    Properties:
      DomainName: "ec2.internal"
      DomainNameServers:
      - "AmazonProvidedDNS"
      Tags: []
  EC2SubnetRouteTableAssociation00rtbassoc0ba7672566f197c8000pTcEZ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0c4bc7b1b0ad3238000E4Goe"
      SubnetId:
        Ref: "EC2Subnet00subnet0cbfaa0f6986d9ba100agik4"
  ElasticLoadBalancingV2LoadBalancer00loadbalancerappassignment2lb58e120db28a4492900mxU2I:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      SecurityGroups:
      - "sg-05ae7e01502c41358"
      LoadBalancerAttributes:
      - Value: ""
        Key: "access_logs.s3.prefix"
      - Value: "append"
        Key: "routing.http.xff_header_processing.mode"
      - Value: "true"
        Key: "routing.http2.enabled"
      - Value: "false"
        Key: "waf.fail_open.enabled"
      - Value: ""
        Key: "connection_logs.s3.bucket"
      - Value: "false"
        Key: "access_logs.s3.enabled"
      - Value: "defensive"
        Key: "routing.http.desync_mitigation_mode"
      - Value: ""
        Key: "connection_logs.s3.prefix"
      - Value: "false"
        Key: "routing.http.x_amzn_tls_version_and_cipher_suite.enabled"
      - Value: "false"
        Key: "routing.http.preserve_host_header.enabled"
      - Value: "true"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "false"
        Key: "routing.http.xff_client_port.enabled"
      - Value: ""
        Key: "access_logs.s3.bucket"
      - Value: "false"
        Key: "deletion_protection.enabled"
      - Value: "3600"
        Key: "client_keep_alive.seconds"
      - Value: "false"
        Key: "routing.http.drop_invalid_header_fields.enabled"
      - Value: "false"
        Key: "connection_logs.s3.enabled"
      - Value: "60"
        Key: "idle_timeout.timeout_seconds"
      Subnets:
      - Ref: "EC2Subnet00subnet0a9dec7516571db8800R6DtB"
      - Ref: "EC2Subnet00subnet0eac46ca7987daa3e00d2LWq"
      - Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc00W6eZX"
      Type: "application"
      Scheme: "internet-facing"
      EnforceSecurityGroupInboundRulesOnPrivateLinkTraffic: ""
      Tags: []
      Name: "assignment2-lb"
      SubnetMappings:
      - SubnetId:
          Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc00W6eZX"
      - SubnetId:
          Ref: "EC2Subnet00subnet0a9dec7516571db8800R6DtB"
      - SubnetId:
          Ref: "EC2Subnet00subnet0eac46ca7987daa3e00d2LWq"
  EC2SubnetNetworkAclAssociation00aclassoc0756e8493a95c87cb003iroP:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000C9MhL"
      SubnetId:
        Ref: "EC2Subnet00subnet0a9dec7516571db8800R6DtB"
  EC2SecurityGroup00sg0f993ec81621d3d9500CzkSG:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "allows ssh, http, https access "
      GroupName: "WebServerSG"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 80
        ToPort: 80
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 22
        ToPort: 22
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 443
        ToPort: 443
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      Tags:
      - Value: "WebServerSG"
        Key: "Name"
  EC2VPC00vpc03ab091f2971e59d600sPFOc:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPC"
    DeletionPolicy: "Retain"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      InstanceTenancy: "default"
      EnableDnsHostnames: true
      Tags:
      - Value: "assignment2-vpc"
        Key: "Name"
  EC2Volume00vol0eb6103d681bf0fbf00YfkYc:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Volume"
    DeletionPolicy: "Retain"
    Properties:
      MultiAttachEnabled: false
      SnapshotId: "snap-0c1cbc77b0353ba6b"
      VolumeType: "gp3"
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZone: "us-east-1b"
      Throughput: 125
      Iops: 3000
      Tags: []
  EC2SubnetRouteTableAssociation00rtbassoc0feff833b13c06bb100b8GZC:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb05c65b04846b1b8e600EYDJe"
      SubnetId:
        Ref: "EC2Subnet00subnet017bf12d9935bedcc005qm6g"
  EC2VolumeAttachment00vol0eb6103d681bf0fbf00OcMbb:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VolumeAttachment"
    DeletionPolicy: "Retain"
    Properties:
      InstanceId: "i-02d03282e8b98e8eb"
      VolumeId: "vol-0eb6103d681bf0fbf"
      Device: "/dev/xvda"
  EC2SecurityGroup00sg05ae7e01502c4135800hm4BU:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "allows http and https access "
      GroupName: "LoadBalancerSG"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 80
        ToPort: 80
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 443
        ToPort: 443
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2SubnetRouteTableAssociation00rtbassoc0ed10b911d5acd14300mxhkp:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0e3327c5663eb64a100VRnny"
      SubnetId:
        Ref: "EC2Subnet00subnet0a9dec7516571db8800R6DtB"
  EC2NatGateway00nat072d4501c44e61ebd00EiWfQ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NatGateway"
    DeletionPolicy: "Retain"
    Properties:
      PrivateIpAddress: "10.0.5.3"
      ConnectivityType: "public"
      VpcId: "vpc-03ab091f2971e59d6"
      EniId: "eni-015b8f3c86c5cc70f"
      AllocationId: "eipalloc-078fe67a166eb8fd6"
      SubnetId:
        Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc00W6eZX"
      Tags:
      - Value: "assignment2-nat-public1-us-east-1a"
        Key: "Name"
  EC2Subnet00subnet0d07ba7c6b47d43fc00W6eZX:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      MapPublicIpOnLaunch: true
      EnableDns64: false
      AvailabilityZoneId: "use1-az1"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.0.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-public1-us-east-1a"
        Key: "Name"
  EC2SubnetNetworkAclAssociation00aclassoc0a0bbb6d8236c9e6500ZxYn9:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000C9MhL"
      SubnetId:
        Ref: "EC2Subnet00subnet0edb10712a7d3c02400kZWRI"
  EC2RouteTable00rtb0212e25d0da502bf200CBQyF:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
  EC2SecurityGroup00sg08c633b05333e924500LHNz4:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "allows ssh access"
      GroupName: "BastionSG"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 22
        ToPort: 22
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      Tags:
      - Value: "BastionSG"
        Key: "Name"
  EC2Subnet00subnet0a9dec7516571db8800R6DtB:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      MapPublicIpOnLaunch: true
      EnableDns64: false
      AvailabilityZoneId: "use1-az4"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.32.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-public3-us-east-1c"
        Key: "Name"
  EC2Route00rtb0e3327c5663eb64a100VCZbk:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0e3327c5663eb64a100VRnny"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC00vpc03ab091f2971e59d600sPFOc"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2Instance00i02d03282e8b98e8eb00ljidH:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Instance"
    DeletionPolicy: "Retain"
    Properties:
      Tenancy: "default"
      SecurityGroups:
      - "WebServerSG"
      PrivateIpAddress: "10.0.23.177"
      UserData: "IyEvYmluL2Jhc2gKZWNobyAiPGI+SW5zdGFuY2UgSUQ6PC9iPiAiID4gL3Zhci93d3cvaHRtbC9pZC5odG1sClRPS0VOPWBjdXJsIC1YIFBVVCAiaHR0cDovLzE2OS4yNTQuMTY5LjI1NC9sYXRlc3QvYXBpL3Rva2VuIiAtSCAiWC1hd3MtZWMyLW1ldGFkYXRhLXRva2VuLXR0bC1zZWNvbmRzOiAyMTYwMCJgCmN1cmwgLUggIlgtYXdzLWVjMi1tZXRhZGF0YS10b2tlbjogJFRPS0VOIgpodHRwOi8vMTY5LjI1NC4xNjkuMjU0L2xhdGVzdC9tZXRhLWRhdGEvaW5zdGFuY2UtaWQvID4+IC92YXIvd3d3L2h0bWwvaWQuaHRtbA=="
      BlockDeviceMappings:
      - Ebs:
          SnapshotId: "snap-0c1cbc77b0353ba6b"
          VolumeType: "gp3"
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      SubnetId:
        Ref: "EC2Subnet00subnet0eac46ca7987daa3e00d2LWq"
      EbsOptimized: false
      Volumes:
      - VolumeId: "vol-0eb6103d681bf0fbf"
        Device: "/dev/xvda"
      LaunchTemplate:
        Version: "1"
        LaunchTemplateName: "assignment2-apache-cloudwatch-lt"
      NetworkInterfaces:
      - PrivateIpAddresses:
        - PrivateIpAddress: "10.0.23.177"
          Primary: true
        SecondaryPrivateIpAddressCount: 0
        DeviceIndex: "0"
        GroupSet:
        - Ref: "EC2SecurityGroup00sg0f993ec81621d3d9500CzkSG"
        Ipv6Addresses: []
        SubnetId:
          Ref: "EC2Subnet00subnet0eac46ca7987daa3e00d2LWq"
        AssociatePublicIpAddress: true
        NetworkInterfaceId:
          Ref: "EC2NetworkInterface00eni0345d2ab3066a426800x5eGm"
        DeleteOnTermination: true
      ImageId: "ami-02820730e7edc9348"
      InstanceType: "t2.nano"
      Monitoring: true
      Tags:
      - Value: "Apache auto-scaled instance"
        Key: "Name"
      InstanceInitiatedShutdownBehavior: "stop"
      CpuOptions:
        ThreadsPerCore: 1
        CoreCount: 1
      AvailabilityZone: "us-east-1b"
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      SecurityGroupIds:
      - "sg-0f993ec81621d3d95"
      DisableApiTermination: false
      KeyName: "newKeyWeek2"
      SourceDestCheck: true
      PlacementGroupName: ""
      VpcId: "vpc-03ab091f2971e59d6"
      CreditSpecification:
        CPUCredits: "standard"
  EC2Route00rtb0c4bc7b1b0ad3238000ustZp:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      NatGatewayId:
        Ref: "EC2NatGateway00nat072d4501c44e61ebd00EiWfQ"
      RouteTableId:
        Ref: "EC2RouteTable00rtb0c4bc7b1b0ad3238000E4Goe"
      DestinationCidrBlock: "0.0.0.0/0"
  EC2Subnet00subnet0cbfaa0f6986d9ba100agik4:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      MapPublicIpOnLaunch: false
      EnableDns64: false
      AvailabilityZoneId: "use1-az4"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.160.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-private3-us-east-1c"
        Key: "Name"
  EC2SubnetNetworkAclAssociation00aclassoc00b59a86c145e131100wWtpR:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000C9MhL"
      SubnetId:
        Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc00W6eZX"
  EC2RouteTable00rtb0e3327c5663eb64a100VRnny:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      Tags:
      - Value: "assignment2-rtb-public"
        Key: "Name"
  EC2SubnetRouteTableAssociation00rtbassoc02f08fc8be158d35700syIyg:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb04deb02926f06214400iz7E5"
      SubnetId:
        Ref: "EC2Subnet00subnet0edb10712a7d3c02400kZWRI"
  EC2SecurityGroup00sg04ebafea13fce1e9e002No2J:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "allows ssh, http, https, mongo access"
      GroupName: "dbServerSG"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      SecurityGroupIngress:
      - IpProtocol: "tcp"
        FromPort: 1433
        SourceSecurityGroupId: "sg-0f993ec81621d3d95"
        ToPort: 1433
        SourceSecurityGroupOwnerId: "635638247318"
      - IpProtocol: "tcp"
        FromPort: 22
        SourceSecurityGroupId: "sg-08c633b05333e9245"
        ToPort: 22
        SourceSecurityGroupOwnerId: "635638247318"
      - IpProtocol: "tcp"
        FromPort: 27017
        SourceSecurityGroupId: "sg-0f993ec81621d3d95"
        ToPort: 27017
        SourceSecurityGroupOwnerId: "635638247318"
      - IpProtocol: "tcp"
        FromPort: 3306
        SourceSecurityGroupId: "sg-0f993ec81621d3d95"
        ToPort: 3306
        SourceSecurityGroupOwnerId: "635638247318"
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      Tags:
      - Value: "dbServerSG"
        Key: "Name"
  EC2RouteTable00rtb0c4bc7b1b0ad3238000E4Goe:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      Tags:
      - Value: "assignment2-rtb-private3-us-east-1c"
        Key: "Name"
  EC2Route00rtb05c65b04846b1b8e600X6bzB:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb05c65b04846b1b8e600EYDJe"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC00vpc03ab091f2971e59d600sPFOc"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  ElasticLoadBalancingV2Listener00listenerappassignment2lb58e120db28a4492951317fe9325567b100wL4QP:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      Protocol: "HTTP"
      LoadBalancerArn:
        Ref: "ElasticLoadBalancingV2LoadBalancer00loadbalancerappassignment2lb58e120db28a4492900mxU2I"
      DefaultActions:
      - TargetGroupArn:
          Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tgb3d357c1fe8477e400ZzNIM"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
          TargetGroups:
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tgb3d357c1fe8477e400ZzNIM"
            Weight: 1
      Port: 80
  EC2Subnet00subnet0edb10712a7d3c02400kZWRI:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      MapPublicIpOnLaunch: false
      EnableDns64: false
      AvailabilityZoneId: "use1-az1"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.128.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-private1-us-east-1a"
        Key: "Name"
  EC2SubnetRouteTableAssociation00rtbassoc017cef495cf725307001TDOe:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0e3327c5663eb64a100VRnny"
      SubnetId:
        Ref: "EC2Subnet00subnet0eac46ca7987daa3e00d2LWq"
  EC2RouteTable00rtb05c65b04846b1b8e600EYDJe:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      Tags:
      - Value: "assignment2-rtb-private2-us-east-1b"
        Key: "Name"
  EC2Subnet00subnet017bf12d9935bedcc005qm6g:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      MapPublicIpOnLaunch: false
      EnableDns64: false
      AvailabilityZoneId: "use1-az2"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.144.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-private2-us-east-1b"
        Key: "Name"
  EC2Subnet00subnet0eac46ca7987daa3e00d2LWq:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      MapPublicIpOnLaunch: true
      EnableDns64: false
      AvailabilityZoneId: "use1-az2"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.16.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-public2-us-east-1b"
        Key: "Name"
  EC2SubnetNetworkAclAssociation00aclassoc05355a1c1c6f4c56400CQCz8:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000C9MhL"
      SubnetId:
        Ref: "EC2Subnet00subnet0eac46ca7987daa3e00d2LWq"
  EC2VPCDHCPOptionsAssociation00vpc03ab091f2971e59d600iLVKK:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPCDHCPOptionsAssociation"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      DhcpOptionsId:
        Ref: "EC2DHCPOptions00dopt015de2090e3cc2b1600GfnZP"
  EC2Route00rtb0212e25d0da502bf200gBwgG:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0212e25d0da502bf200CBQyF"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC00vpc03ab091f2971e59d600sPFOc"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2SubnetRouteTableAssociation00rtbassoc08dd040a4d097fcd7005FpBe:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0e3327c5663eb64a100VRnny"
      SubnetId:
        Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc00W6eZX"
  AutoScalingAutoScalingGroup00assignment2asg009k2GE:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::AutoScaling::AutoScalingGroup"
    DeletionPolicy: "Retain"
    Properties:
      LoadBalancerNames: []
      ServiceLinkedRoleARN: "arn:aws:iam::635638247318:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling"
      TargetGroupARNs:
      - Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tgb3d357c1fe8477e400ZzNIM"
      Cooldown: "300"
      AvailabilityZones:
      - "us-east-1a"
      - "us-east-1b"
      - "us-east-1c"
      DesiredCapacity: "1"
      HealthCheckGracePeriod: 30
      MetricsCollection:
      - Granularity: "1Minute"
        Metrics:
        - "WarmPoolDesiredCapacity"
        - "GroupDesiredCapacity"
        - "WarmPoolPendingCapacity"
        - "GroupAndWarmPoolDesiredCapacity"
        - "GroupInServiceCapacity"
        - "GroupMinSize"
        - "WarmPoolMinSize"
        - "GroupPendingCapacity"
        - "GroupStandbyCapacity"
        - "WarmPoolTotalCapacity"
        - "GroupTerminatingInstances"
        - "GroupInServiceInstances"
        - "GroupTotalInstances"
        - "GroupAndWarmPoolTotalCapacity"
        - "GroupStandbyInstances"
        - "GroupMaxSize"
        - "GroupTotalCapacity"
        - "WarmPoolWarmedCapacity"
        - "GroupPendingInstances"
        - "GroupTerminatingCapacity"
        - "WarmPoolTerminatingCapacity"
      MaxSize: "3"
      NewInstancesProtectedFromScaleIn: false
      MinSize: "1"
      TerminationPolicies:
      - "Default"
      LaunchTemplate:
        Version: "$Default"
        LaunchTemplateName: "assignment2-apache-cloudwatch-lt"
        LaunchTemplateId: "lt-0b4c11fe65a363697"
      AutoScalingGroupName: "assignment2-asg"
      VPCZoneIdentifier:
      - Ref: "EC2Subnet00subnet0a9dec7516571db8800R6DtB"
      - Ref: "EC2Subnet00subnet0eac46ca7987daa3e00d2LWq"
      - Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc00W6eZX"
      Tags:
      - Value: "Apache auto-scaled instance"
        Key: "Name"
        PropagateAtLaunch: true
      HealthCheckType: "EC2"
  EC2InternetGateway00igw0cd3c759ebd09417c006mHVw:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::InternetGateway"
    DeletionPolicy: "Retain"
    Properties:
      Tags:
      - Value: "assignment2-igw"
        Key: "Name"
  EC2SubnetNetworkAclAssociation00aclassoc09eaa7a70c78a0c4a00uIv89:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000C9MhL"
      SubnetId:
        Ref: "EC2Subnet00subnet017bf12d9935bedcc005qm6g"
  EC2NetworkInterface00eni0345d2ab3066a426800x5eGm:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      Description: ""
      PrivateIpAddress: "10.0.23.177"
      PrivateIpAddresses:
      - PrivateIpAddress: "10.0.23.177"
        Primary: true
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-0f993ec81621d3d95"
      Ipv6Prefixes: []
      SubnetId:
        Ref: "EC2Subnet00subnet0eac46ca7987daa3e00d2LWq"
      SourceDestCheck: true
      InterfaceType: "interface"
      Tags: []
  EC2SubnetNetworkAclAssociation00aclassoc0bad6dd56440e6dd20065o9l:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000C9MhL"
      SubnetId:
        Ref: "EC2Subnet00subnet0cbfaa0f6986d9ba100agik4"
  EC2NetworkAcl00acl0bd442c4e60a65a5000C9MhL:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkAcl"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d600sPFOc"
      Tags: []
